log
Thu 14 Sep 2023 06:58:06 PM UTC: 
 tests:  1|8
total_score: 0/70
7162897
Thu 14 Sep 2023 07:14:36 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
467707c
Thu 14 Sep 2023 07:15:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
254ce9d
Thu 14 Sep 2023 07:26:08 PM UTC: 
 treemap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  0|0
52b94de
Thu 14 Sep 2023 07:26:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
25fb6d0
Thu 14 Sep 2023 07:41:55 PM UTC: 
 treemap.c | 21 +++++++--------------
 1 file changed, 7 insertions(+), 14 deletions(-)
 tests:  4|7
total_score: 5/70
9524ba2
Thu 14 Sep 2023 07:43:26 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f326cb8
Thu 14 Sep 2023 07:56:11 PM UTC: 
 treemap.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
6467344
Fri 15 Sep 2023 12:26:12 AM UTC: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
49a4e03
Fri 15 Sep 2023 12:57:51 AM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
247ddae
Fri 15 Sep 2023 01:08:43 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
a61c778
Fri 15 Sep 2023 01:10:16 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
b5d953c
Fri 15 Sep 2023 01:15:32 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
9281362
Fri 15 Sep 2023 01:16:38 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
6483a16
Fri 15 Sep 2023 01:17:00 AM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  12|6
total_score: 15/70
9c6e5b4
Fri 15 Sep 2023 01:17:31 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
fb7cd73
Fri 15 Sep 2023 01:17:51 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
bf895fa
Fri 15 Sep 2023 01:26:10 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c567117
Fri 15 Sep 2023 01:27:48 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  12|6
total_score: 15/70
65d32da
Fri 15 Sep 2023 01:28:20 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  12|6
total_score: 15/70
2423741
Fri 15 Sep 2023 01:29:11 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|6
total_score: 15/70
56f557c
Fri 15 Sep 2023 03:39:24 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
945db54
Fri 15 Sep 2023 04:14:22 AM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   61 |   TreeNode* parent = NULL;
      |             ^~~~~~
treemap.c: In function ‘removeNode’:
treemap.c:103:14: error: unused variable ‘nodoActual’ [-Werror=unused-variable]
  103 |   TreeNode * nodoActual = tree->root;
      |              ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ce458aa
Fri 15 Sep 2023 04:15:47 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   61 |   TreeNode* parent = NULL;
      |             ^~~~~~
treemap.c: In function ‘removeNode’:
treemap.c:101:14: error: unused variable ‘nodoActual’ [-Werror=unused-variable]
  101 |   TreeNode * nodoActual = tree->root;
      |              ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0f3bed0
Fri 15 Sep 2023 04:15:58 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:100:14: error: unused variable ‘nodoActual’ [-Werror=unused-variable]
  100 |   TreeNode * nodoActual = tree->root;
      |              ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
01d6f64
Fri 15 Sep 2023 02:10:30 PM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  14|5
total_score: 15/70
5b93b60
Fri 15 Sep 2023 02:21:09 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
d3b784d
